--- a/package.json
+++ b/package.json
@@ -4,9 +4,21 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "dev": "tsnd --cls --rs src/server.ts"
   },
+  "repository": "https://github.com/Kenzie-Academy-Brasil-Developers/m4-t14-movies-typeorm-TommiL90.git",
+  "author": "TBenjaminL90 <tomasbenjamin.l90@gmail.com>",
+  "license": "MIT",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^9.0.0",
+    "pg": "^8.9.0",
+    "pg-format": "^1.0.4",
+    "zod": "^3.20.6"
   },
   "devDependencies": {
     "@jest/globals": "^29.4.3",
@@ -17,6 +29,12 @@
     "sqlite3": "^5.1.4",
     "supertest": "^6.3.3",
     "ts-jest": "^29.0.5",
-    "typescript": "4.5.2"
+    "typescript": "4.5.2",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.1",
+    "@types/pg": "^8.6.6",
+    "@types/pg-format": "^1.0.2",
+    "ts-node-dev": "^2.0.0"
   }
 }
