--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "dev": "tsnd --cls --rs src/server.ts"
+    "dev": "ts-node-dev --ignore-watch node_modules --cls --rs src/server.ts",
+    "typeorm": "typeorm-ts-node-commonjs"
   },
   "repository": "https://github.com/Kenzie-Academy-Brasil-Developers/m4-t14-movies-typeorm-TommiL90.git",
   "author": "TBenjaminL90 <tomasbenjamin.l90@gmail.com>",
@@ -18,23 +19,25 @@
     "jsonwebtoken": "^9.0.0",
     "pg": "^8.9.0",
     "pg-format": "^1.0.4",
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "0.3.11",
     "zod": "^3.20.6"
   },
   "devDependencies": {
     "@jest/globals": "^29.4.3",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/express": "^4.17.17",
     "@types/jest": "^29.4.0",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^16.11.10",
+    "@types/pg": "^8.6.6",
+    "@types/pg-format": "^1.0.2",
     "@types/supertest": "^2.0.12",
     "jest": "^29.4.3",
     "sqlite3": "^5.1.4",
     "supertest": "^6.3.3",
     "ts-jest": "^29.0.5",
-    "typescript": "4.5.2",
-    "@types/bcryptjs": "^2.4.2",
-    "@types/express": "^4.17.17",
-    "@types/jsonwebtoken": "^9.0.1",
-    "@types/pg": "^8.6.6",
-    "@types/pg-format": "^1.0.2",
-    "ts-node-dev": "^2.0.0"
+    "ts-node-dev": "^2.0.0",
+    "typescript": "4.5.2"
   }
 }
